(rule
  (target upstream-grammar)
  (deps upstream.mly)
  (action
    (with-stdout-to
      %{target}
      (run %{bin:menhir} --only-preprocess-u %{deps}))))

(rule
  (target my-grammar)
  (deps ../parsing/parser.mly)
  (action
    (with-stdout-to
      %{target}
      (run %{bin:menhir} --only-preprocess-u %{deps}))))

(rule
  (alias runtest)
  (action (diff upstream-grammar my-grammar)))
