(library
 (name source_parsing)
 (libraries menhirLib)
 (modules_without_implementation asttypes source_tree))

(ocamllex lexer)
(menhir
  (modules parser)
  (flags --lalr --strict --table -lg 1 -la 1 --unused-token COMMENT --unused-token DOCSTRING --unused-token EOL --unused-token GREATERRBRACKET --fixed-exception))
